--- a/acq4_autopatch/main_window.ui
+++ b/acq4_autopatch/main_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Autopatch</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="margin">
